# enote

./: .gitignore  CMakeLists.txt  INSTALL  README.md  make.sh
data/: enote  enote.desktop  notes  notes.desktop
schema/: org.pantheon.enote.gschema.xml
src/: CMakeLists.txt  Enote.vala  GAuth.vala  Intrusive.vala  NewTask.vala  NewTaskView.vala  NoteBookPage.vala  Notes.vala  Persistence.vala  Preferences.vala  PreferencesWindow.vala  RecordView.vala  Settings.vala  Task.vala  TaskList.vala  TaskListView.vala  Utils.vala  View.vala  Welcome.vala  Window.vala  main.vala  view.sh
